# oren

./: .gitignore  README.md  requirements.txt
configs/: gui.yaml  trainer-replica.yaml
configs/replica/: forest.yaml  garage.yaml  industrial.yaml  warehouse.yaml
configs/v2/: replica.yaml  trainer-replica.yaml  trainer.yaml
docs/: index.html
grad-sdf-cpp/: .gitignore  CMakeLists.txt  README.md
grad-sdf-cpp/include/grad_sdf_cpp/: config.hpp  octree_module.hpp  residual_net_module.hpp  sdf_network_module.hpp
grad-sdf-cpp/models/: model.pth
grad-sdf-cpp/src/: config.cpp  eval.cpp  extract_mesh.cpp  main.cpp  octree_module.cpp  residual_net_module.cpp  sdf_network_module.cpp
grad-sdf-cpp/tools/: export_cpp_bundle.py
grad_sdf/: criterion.py  evaluator_base.py  evaluator_grad_sdf.py  frame.py  model.py  residual_net.py  semi_sparse_octree_base.py  semi_sparse_octree_v2.py  trainer.py  trainer_ros.py
grad_sdf/dataset/: newercollege.py  newercollege_obb_rotation.py  replica.py
grad_sdf/node/: mapping_quad_node.py
oren/oren/: criterion.py  evaluator_oren.py  frame.py  gui_base.py  gui_trainer.py  key_frame_set.py  loggers.py  octree_config.py  semi_sparse_octree.py  semi_sparse_octree_base.py  trainer.py  trainer_config.py
oren/oren/dataset/: data_config.py  newer_college.py  replica.py
oren/oren/utils/: config_abc.py  depth_utils.py  keyframe_util.py  profiling.py
scripts/: check_custom_bounds.py  demo.bash  extract_mesh_cpp_model.py  replica_evaluate_example.bash  train_all_custom.sh  train_all_replica.sh  train_forest.sh  train_garage.sh  train_industrial.sh  train_warehouse.sh
